Fix layout issues on desktop

--- a/src/sections/Layout/Header/styles.scss
+++ b/src/sections/Layout/Header/styles.scss
@@ -54,6 +54,7 @@
 
 .profile {
   width: $profile-width;
+  color: $actionlink-color-inverted;
 }
 
 /******************************************************************************
