--- a/src/sections/Layout/styles.scss
+++ b/src/sections/Layout/styles.scss
@@ -94,6 +94,8 @@
     margin: $masthead-height 0 0;
     padding: $padding-medium-2;
     padding-bottom: 0;
+    flex-grow: 1;
+    min-height: 100vh;
   }
 
   .navigation,
